# taskcast

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.railway  LICENSE  README.md  README.zh.md  codecov.yml  docker-compose.stress-rust.yml  docker-compose.stress.yml  docker-compose.yml  fly.toml  nginx.stress.conf  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  tsconfig.json
.changeset/: add-package-readmes.md  auto-migrate-feature.md  config.json  fix-cli-npx-and-config.md  fix-concurrent-publish-ordering.md  fix-latest-series-duplicate.md  fix-rust-docker-glibc.md  fix-sqlite-db-path.md  fix-workspace-refs.md  history-limit-series-format.md  quick-series-compaction.md  quiet-servers-report.md  release-0-4-0.md  rust-daemon-service.md  series-format.md  server-sdk-subscribe.md  sqlite-local-storage.md  task-archive-import-export.md  trusted-service-keys.md  unified-release-workflow.md  worker-assignment.md
.github/workflows/: ci.yml  docker-rust.yml  docker.yml  e2e.yml  npm.yml  release.yml  rust.yml
docs/: plan.md
docs/api/: authentication.md  authentication.zh.md  rest.md  rest.zh.md  sse.md  sse.zh.md  webhooks.md  webhooks.zh.md
docs/guide/: auto-migrate.md  concepts.md  concepts.zh.md  deployment.md  deployment.zh.md  getting-started.md  getting-started.zh.md
docs/plans/: 2026-02-28-deployment-config-design.md  2026-02-28-deployment-config-plan.md  2026-02-28-rust-rewrite-design.md  2026-02-28-rust-rewrite-plan.md  2026-02-28-taskcast-01-monorepo-core.md  2026-02-28-taskcast-02-adapters.md  2026-02-28-taskcast-03-server.md  2026-02-28-taskcast-04-sdks-cli.md  2026-02-28-taskcast-05-sentry-tests.md  2026-02-28-taskcast-design.md  2026-03-02-changesets-migration.md  2026-03-02-cli-subcommand-design.md  2026-03-02-rust-worker-assignment-plan.md  2026-03-02-sqlite-local-storage-design.md  2026-03-02-sqlite-local-storage.md  2026-03-02-worker-assignment-design.md  2026-03-02-worker-assignment-plan.md  2026-03-03-global-config-fallback-design.md  2026-03-03-global-config-fallback-plan.md  2026-03-03-homebrew-tap-design.md  2026-03-03-homebrew-tap-plan.md  2026-03-03-rust-test-coverage-plan.md  2026-03-03-suspended-states-worker-protocol-design.md  2026-03-03-suspended-states-worker-protocol-plan.md  2026-03-05-swagger-openapi-design.md  2026-03-05-swagger-openapi-plan.md  2026-03-06-dashboard-web-design.md  2026-03-06-dashboard-web-plan.md  2026-03-06-e2e-testing-design.md  2026-03-06-integration-tests-design.md  2026-03-06-integration-tests-impl-plan.md  2026-03-06-migration-cli-design.md  2026-03-06-migration-cli-plan.md  2026-03-06-playground-design.md  2026-03-06-playground-plan.md  2026-03-06-rust-embed-playground-design.md  2026-03-06-rust-embed-playground-plan.md  2026-03-07-agent-friendly-cli-design.md  2026-03-07-agent-friendly-cli-plan.md  2026-03-07-bad-case-test-audit.md  (+7 more)
docs/skill/: taskcast.md
docs/superpowers/plans/: 2026-03-19-service-management.md  2026-04-05-rust-daemon.md  2026-04-05-rust-daemon.md.tasks.json  2026-04-08-auto-migrate-plan.md  2026-04-08-auto-migrate-plan.md.tasks.json  2026-07-07-task-archive-import-export.md  2026-07-24-http-5xx-logging.md
rust/: .gitignore  Cargo.toml  Dockerfile
rust/taskcast-cli/: Cargo.toml
rust/taskcast-cli/src/: auto_migrate.rs  client.rs  helpers.rs  lib.rs  main.rs  node_config.rs  tty.rs
rust/taskcast-cli/src/commands/: doctor.rs  logs.rs  migrate.rs  mod.rs  node.rs  ping.rs  playground.rs  start.rs  tasks.rs
rust/taskcast-cli/src/commands/service/: health.rs  launchd.rs  manager.rs  mod.rs  paths.rs  systemd.rs
rust/taskcast-cli/tests/: cli_e2e.rs  client_tests.rs  doctor_run_tests.rs  doctor_tests.rs  logs_tests.rs  migrate_tests.rs  node_run_tests.rs  ping_run_tests.rs  ping_tests.rs  playground_tests.rs  start_auto_migrate_test.rs  start_env_tests.rs  start_tests.rs  tasks_tests.rs
rust/taskcast-core/: Cargo.toml
rust/taskcast-core/src/: archive.rs  cleanup.rs  config.rs  engine.rs  filter.rs  heartbeat_monitor.rs  lib.rs  memory_adapters.rs  scheduler.rs  series.rs  state_machine.rs  types.rs  worker_manager.rs  worker_matching.rs
rust/taskcast-core/tests/: archive.rs  concurrent_publish.rs  engine_series.rs  heartbeat_monitor.rs  proptest_config.rs  proptest_filter.rs  scheduler.rs  series_collapse.rs  suspended_states.rs  worker_cross_cutting.rs  worker_manager_extended.rs  worker_release.rs  worker_remaining_gaps.rs
rust/taskcast-postgres/: Cargo.toml
rust/taskcast-postgres/migrations/: 001_initial.sql  002_workers.sql
rust/taskcast-postgres/src/: lib.rs  store.rs
rust/taskcast-postgres/tests/: store_tests.rs
rust/taskcast-redis/: Cargo.toml
rust/taskcast-redis/src/: broadcast.rs  lib.rs  short_term.rs
rust/taskcast-redis/tests/: concurrent.rs  short_term_tests.rs
rust/taskcast-server/: Cargo.toml
rust/taskcast-server/src/: app.rs  auth.rs  error.rs  http_failure.rs  lib.rs  openapi.rs  verbose.rs  webhook.rs
rust/taskcast-server/src/routes/: admin.rs  mod.rs  sse.rs  tasks.rs  worker_ws.rs  workers.rs
rust/taskcast-server/tests/: admin_token.rs  app_dispatch_tests.rs  archive_routes.rs  blocked_resolve.rs  cors.rs  global_sse.rs  health_detail.rs  history_limit_series.rs  http_failure_logger.rs  malformed_bearer.rs  malformed_json.rs  resolve_auth.rs  server_tests.rs  sse_filter.rs  sse_series_format.rs  sse_worker.rs  tasks_edge_cases.rs  verbose_logger.rs  worker_extended.rs  worker_release.rs  workers_bad_cases.rs  ws_bad_messages.rs  ws_dispatch.rs  ws_errors.rs  ws_handler.rs
rust/taskcast-sqlite/: Cargo.toml
rust/taskcast-sqlite/migrations/: 001_initial.sql
rust/taskcast-sqlite/src/: lib.rs  long_term.rs  row_helpers.rs  short_term.rs
rust/taskcast-sqlite/tests/: factory.rs  long_term.rs  short_term.rs
rust/taskcast-sqlite/tests/helpers/: mod.rs
rust/tests/: integration.sh  integration.test.ts  vitest.config.ts
scripts/: compare.ts  generate-migrations.js  homebrew-formula.rb.template  stress.ts  sync-rust-version.sh  update-homebrew.sh
(+4 files in other folders)
