[package]
name = "taskcast-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskcast"
path = "src/main.rs"

[dependencies]
taskcast-core = { path = "../taskcast-core" }
taskcast-server = { path = "../taskcast-server" }
taskcast-postgres = { path = "../taskcast-postgres" }
taskcast-redis = { path = "../taskcast-redis" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
jsonwebtoken = "9"
