[package]
name = "taskcast-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskcast"
path = "src/main.rs"

[dependencies]
taskcast-core = { path = "../taskcast-core" }
taskcast-server = { path = "../taskcast-server" }
taskcast-postgres = { path = "../taskcast-postgres" }
taskcast-redis = { path = "../taskcast-redis" }
taskcast-sqlite = { path = "../taskcast-sqlite" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
url = "2"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
jsonwebtoken = "9"
rust-embed = "8"
mime_guess = "2"
serde = { workspace = true }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
futures-util = "0.3"

[lib]
name = "taskcast_cli"
path = "src/lib.rs"

[dev-dependencies]
tempfile = { workspace = true }
axum-test = "19"
