[package]
name = "taskcast-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
taskcast-core = { path = "../taskcast-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { workspace = true }
