[package]
name = "taskcast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
taskcast-core = { path = "../taskcast-core" }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = "9"
http = "1"
thiserror = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
utoipa = { version = "5", features = ["axum_extras", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
axum-test = { version = "19", features = ["ws"] }
tempfile = { workspace = true }
